//
//  GrandTravelUITests.swift
//  GrandTravelUITests
//
//  Created by Tyler Liu on 7/30/19.
//  Copyright © 2019 CHUNTAO LIU. All rights reserved.
//

import XCTest

class GrandTravelUITests: XCTestCase {

    override func setUp() {
        // Put setup code here. This method is called before the invocation of each test method in the class.

        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false

        // UI tests must launch the application that they test. Doing this in setup will make sure it happens for each test method.
        XCUIApplication().launch()

        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
        
        let app = XCUIApplication()
        setupSnapshot(app)
        app.launch()
    }

    override func tearDown() {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
    }

    func testExample() {
        
        let tabBarsQuery = XCUIApplication().tabBars
        tabBarsQuery.buttons["Home"].tap()
        snapshot("01Home")
        tabBarsQuery.buttons["About"].tap()
        snapshot("02About")
        tabBarsQuery.buttons["Tours"].tap()
        snapshot("03Tours")
        tabBarsQuery.buttons["Contact"].tap()
        snapshot("04Contact")
        // Use recording to get started writing UI tests.
        // Use XCTAssert and related functions to verify your tests produce the correct results.
    }

}
